fix: add letter-spacing and Montserrat font to book navigation

--- a/scss/estilos-pasos.scss
+++ b/scss/estilos-pasos.scss
@@ -52,6 +52,9 @@
      Navegación libro / menú lateral
      ---------------------------------------------------------- */
   .book-navigation.details-info {
+    letter-spacing: -0.15pt;
+    font-family: "Montserrat", sans-serif;
+
     .page-sidebar.menu-xs {
       .nav-pills.nav-stacked {
         > li > a {
